<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Pa_signup"
    android:background="@drawable/bluebackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/trans75"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <EditText
            android:id="@+id/pa_Password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/pa_Password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:hint="@string/reenter_Password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/pa_FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:hint="@string/f_name"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="116dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />





        <EditText
            android:id="@+id/pa_LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@id/pa_FirstName"

            android:layout_margin="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:hint="@string/l_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/pa_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="@string/UserName"
            android:layout_below="@id/pa_LastName"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/pa_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_below="@id/pa_Username"
            android:hint="@string/p_word"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btn_PASignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@drawable/round_btn_blue"
            android:textColor="@color/white"
            android:text="@string/btn_signup"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="17dp"
            android:layout_below="@+id/pa_Password2"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/please_register_here"
        android:textSize="25sp" />
</RelativeLayout>